edit projects page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <a href="http://github.com/cleriphil/Ruby_Game"><img class="project-image" src="public/ruby_game1.png" alt="ruby game screenshot"></a>
 
             <li class="name"><a href="http://github.com/cleriphil/Ruby_Game">Ruby Game </a><strong><a class="pull-right" href="http://github.com/cleriphil/Ruby_Game"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
-            <li class="description">A text-based adventure game for learners of Ruby. Users must fill in missing code blocks to progress in their journey. Made with Ruby, Sinatra and ActiveRecord.</li><br>
+            <li class="description">A text-based adventure game for learners of Ruby. Users must fill in missing code blocks to progress in their journey.</li><br>
             <li><small>Ruby, Sinatra, Active Record, Bootstrap</small></li>
 
           </div>
