--- a/resume/index.html
+++ b/resume/index.html
@@ -9,7 +9,7 @@
     <link href="../public/css/styles.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300|ABeeZee' rel='stylesheet' type='text/css'>
 
-    <script src="../js/jquery-1.11.3.js"></script>
+    <script src="../js/jquery-1.11.3.min.js"></script>
     <script src="../js/scripts.js"></script>
     <title>Cleri Philiastides - Web Developer</title>
   </head>
