--- a/resume/index.html
+++ b/resume/index.html
@@ -42,7 +42,7 @@
         <h2 class="text-center">Resumé</h2>
 
         <h2>Experience</h2>
-        <h4>QA Tester</h4>
+        <h4>QA Developer</h4>
         <h5><em>Cardsmith.co</em> - Portland, OR <span class="pull-right">2015-present</span></h5>
         <ul class="resume">
           <li>Produce test scripts and perform regression testing when bugs are resolved</li>
