--- a/about/index.html
+++ b/about/index.html
@@ -38,19 +38,23 @@
 
 
       <div class="main-content col-md-5 ">
+        <div class="about-section">
 
-        <h2 class="text-center">About</h2>
-        <p>I’m an artist who recently dived into the world of programming.
-        After studying art history, I happened upon a database researcher
-        job for a pair of artists. I fiddled with Excel to organize existing data
-        and plan for future data collection through a user interface. The
-        problem solving and logic involved in my work inspired me to learn
-        to code, which led me to attend Epicodus, a four month intensive
-         bootcamp. Now, I’m looking to utilize my skills in a developer
-         position while expanding my knowledge of different languages,
-         tools and frameworks. With a passion for visual culture and art,
-          I’m eager to take part in creative endeavors through technology.</p>
 
+          <div class="photo-circle"></div>
+
+          <div class="about-me">I’m an artist who recently dived into the world of programming.
+          After studying art history, I happened upon a database researcher
+          job for a pair of artists. I fiddled with Excel to organize existing data
+          and plan for future data collection through a user interface. The
+          problem solving and logic involved in my work inspired me to learn
+          to code, which led me to attend Epicodus, a four month intensive
+           bootcamp. Now, I’m looking to utilize my skills in a developer
+           position while expanding my knowledge of different languages,
+           tools and frameworks. With a passion for visual culture and art,
+            I’m eager to take part in creative endeavors through technology.</div>
+
+        </div>
       </div>
     </div>
 
