add active class to navbar

--- a/about/index.html
+++ b/about/index.html
@@ -27,10 +27,10 @@
 
       <div class="menu left-nav">
           <ul>
-              <li role="menuitem" class="nav-link"><a href="index.html">About</a></li>
-              <li role="menuitem" class="nav-link"><a href="../index.html">Projects</a></li>
-              <li role="menuitem" class="nav-link"><a href="../resume/index.html">Resumé</a></li>
-              <li role="menuitem" class="nav-link"><a href="../contact/index.html">Contact</a></li>
+              <li role="menuitem" class="active"><a href="index.html">About</a></li>
+              <li role="menuitem"><a href="../index.html">Projects</a></li>
+              <li role="menuitem"><a href="../resume/index.html">Resumé</a></li>
+              <li role="menuitem"><a href="../contact/index.html">Contact</a></li>
           </ul>
       </div>
       <div class="toggle"></div>
