--- a/contact/index.html
+++ b/contact/index.html
@@ -27,24 +27,18 @@
 
       <div class="menu left-nav">
           <ul>
-              <li role="menuitem" class="nav-link"><a href="../about/index.html">About</a></li>
-              <li role="menuitem" class="nav-link"><a href="../index.html">Projects</a></li>
-              <li role="menuitem" class="nav-link"><a href="../resume/index.html">Resumé</a></li>
-              <li role="menuitem" class="nav-link"><a href="index.html">Contact</a></li>
+              <li role="menuitem"><a href="../about/index.html">About</a></li>
+              <li role="menuitem"><a href="../index.html">Projects</a></li>
+              <li role="menuitem"><a href="../resume/index.html">Resumé</a></li>
+              <li role="menuitem" class="active"><a href="index.html">Contact</a></li>
           </ul>
       </div>
       <div class="toggle"></div>
 
       <div class="main-content col-md-5 ">
-        <div class="text-center">
-          <h2>Contact</h2>
-          <br>
-          <p>Feel free to reach out!</p>
+
 
         <br>
-        </div>
-
-
         <h5>e: <a href="mailto:cleri.phil@gmail.com">cleri.phil@gmail.com</a><h5>
         <h5>l: <a href="http://www.linkedin.com/in/cleri" target="_blank">www.linkedin.com/in/cleri</a></h5>
         <h5>g: <a href="http://www.github.com/cleriphil" target="_blank">www.github.com/cleriphil</a></h5>
