--- a/resume/index.html
+++ b/resume/index.html
@@ -28,10 +28,10 @@
 
       <div class="menu left-nav">
           <ul>
-              <li role="menuitem" class="nav-link"><a href="../about/index.html">About</a></li>
-              <li role="menuitem" class="nav-link"><a href="../index.html">Projects</a></li>
-              <li role="menuitem" class="nav-link"><a href="index.html">Resumé</a></li>
-              <li role="menuitem" class="nav-link"><a href="../contact/index.html">Contact</a></li>
+              <li role="menuitem"><a href="../about/index.html">About</a></li>
+              <li role="menuitem"><a href="../index.html">Projects</a></li>
+              <li role="menuitem" class="active"><a href="index.html">Resumé</a></li>
+              <li role="menuitem"><a href="../contact/index.html">Contact</a></li>
           </ul>
       </div>
       <div class="toggle"></div>
@@ -40,8 +40,6 @@
 
 
       <div class="main-content col-md-5 ">
-
-        <h2 class="text-center">Resumé</h2>
 
         <h2>Experience</h2>
         <h4>QA Developer</h4>
