--- a/index.html
+++ b/index.html
@@ -26,18 +26,16 @@
 
       <div class="menu left-nav">
           <ul>
-              <li role="menuitem" class="nav-link"><a href="about/index.html">About</a></li>
-              <li role="menuitem" class="nav-link"><a href="index.html">Projects</a></li>
-              <li role="menuitem" class="nav-link"><a href="resume/index.html">Resumé</a></li>
-              <li role="menuitem" class="nav-link"><a href="contact/index.html">Contact</a></li>
+              <li role="menuitem"><a href="about/index.html">About</a></li>
+              <li role="menuitem" class="active"><a href="index.html">Projects</a></li>
+              <li role="menuitem"><a href="resume/index.html">Resumé</a></li>
+              <li role="menuitem"><a href="contact/index.html">Contact</a></li>
           </ul>
       </div>
       <div class="toggle"></div>
 
 
       <div class="main-content col-md-5 ">
-
-              <h2 class="text-center">Projects</h2>
 
       <br>
       <div class="projects">
