--- a/index.html
+++ b/index.html
@@ -25,100 +25,199 @@
       </header>
 
       <div class="menu left-nav">
-          <ul>
-              <li role="menuitem"><a href="about/index.html">About</a></li>
-              <li role="menuitem" class="active"><a href="index.html">Projects</a></li>
-              <li role="menuitem"><a href="resume/index.html">Resumé</a></li>
-              <li role="menuitem"><a href="contact/index.html">Contact</a></li>
-          </ul>
+        <ul>
+          <li role="menuitem"><div class="navlink" id="navlink_1">About</div></li>
+          <li role="menuitem"><div class="navlink active" id="navlink_2">Projects</div></li>
+          <li role="menuitem"><div class="navlink" id="navlink_3">Resumé</div></li>
+          <li role="menuitem"><div class="navlink" id="navlink_4">Contact</div></li>
+        </ul>
       </div>
       <div class="toggle"></div>
 
-
-      <div class="main-content col-md-5 ">
-
-      <br>
-      <div class="projects">
-        <ul>
+      <!-- about below -->
+      <div class="sections col-md-5" id="section_1">
+        <div class="about-section">
 
 
-          <div class="project">
+          <div class="photo-circle"></div>
 
+          <div class="about-me">I’m an artist who recently dived into the world of programming.
+          After studying art history, I happened upon a database researcher
+          job for a pair of artists. I fiddled with Excel to organize existing data
+          and plan for future data collection through a user interface. The
+          problem solving and logic involved in my work inspired me to learn
+          to code, which led me to attend Epicodus, a four month intensive
+           bootcamp. Now, I’m looking to utilize my skills in a developer
+           position while expanding my knowledge of different languages,
+           tools and frameworks. With a passion for visual culture and art,
+            I’m eager to take part in creative endeavors through technology.</div>
 
-                <a href="http://github.com/cleriphil/Portfolio_new"><img class="project-image" src="public/portfolio.png" alt="portfolio screenshot"></a>
-
-            <li class="name"><strong>Portfolio Site - Ruby on Rails</strong><a class="pull-right" href="http://github.com/cleriphil/Portfolio_new"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
-            <li class=" description">Take a look at the source code for the Rails version of my
-              portfolio site. Using Devise for authentication/authorization, the app allows users to
-              create, edit and delete blog posts and comments.</li><br>
-            <li><small>Ruby on Rails, Active Record, AJAX, JQuery, SASS, Bootstrap</small></li>
-
-          </div>
-
-            <br>
-
-            <hr>
-
-            <div class="project">
-
-
-                  <a href="http://github.com/cleriphil/Ruby_Game"><img class="project-image" src="public/ruby_game1.png" alt="ruby game screenshot"></a>
-
-              <li class="name"><a href="http://github.com/cleriphil/Ruby_Game">Ruby Game </a><strong><a class="pull-right" href="http://github.com/cleriphil/Ruby_Game"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
-              <li class="description">A text-based adventure game for learners of Ruby. Users must fill in missing code blocks to progress in their journey.</li><br>
-              <li><small>Ruby, Sinatra, Active Record, Bootstrap</small></li>
-
-            </div>
-            <br>
-
-            <hr>
-
-            <div class="project">
-
-
-                  <a href="http://roman-forum.bitballoon.com/"><img class="project-image" src="public/roman_forum.png" alt="roman forum screenshot"></a>
-
-              <li class="name"><a href="http://github.com/cleriphil/Roman_Forum">Roman Forum</a><strong><a class="pull-right" href="http://github.com/cleriphil/Roman_Forum"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
-              <li class="description">An advice message board app built with Ember.js. Users may add, edit and delete questions and answers. </li><br>
-              <li><small>Ember.js, Bootstrap</small></li>
-
-            </div>
-            <br>
-
-            <hr>
-
-
-            <div class="project">
-
-
-                  <a href="http://github.com/cleriphil/artnet-auctions-clone"><img class="project-image" src="public/artnet_auctions.png" alt="artnet auctions clone screenshot"></a>
-
-              <li class="name"><a href="http://github.com/cleriphil/artnet-auctions-clone">Artnet Auctions Clone </a><strong><a class="pull-right" href="http://github.com/cleriphil/artnet-auctions-clone"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
-              <li class="description">A version of Artnet Auctions built with Ruby on Rails and AJAX. (A work in progress!) </li><br>
-              <li><small>Ruby on Rails, Active Record, AJAX, Bootstrap</small></li>
-
-            </div>
-            <br>
-
-            <hr>
-
-
-            <div class="project">
-
-
-                  <a href="http://orderapizza.bitballoon.com/"><img class="project-image" src="public/pizza.png" alt="order a pizza screenshot"></a>
-
-              <li class="name"><a href="http://www.github.com/cleriphil/order_a_pizza">Order a Pizza </a><strong><a class="pull-right" href="http://www.github.com/cleriphil/order_a_pizza"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
-              <li class="description">A JQuery app that allows users to select the size, toppings and quantity of their desired pie. When selections are submitted, the app dynamically updates the cost of the order.  </li><br>
-              <li><small>JQuery, Mocha/Chai</small></li>
-
-            </div>
-            <br>
-
-
-        </ul>
+        </div>
       </div>
 
+      <!-- projects below -->
+      <div class="sections col-md-5" id="section_2">
+
+      <br>
+        <div class="projects-list">
+          <ul>
+
+
+            <div class="project">
+
+
+                  <a href="http://github.com/cleriphil/Portfolio_new"><img class="project-image" src="public/portfolio.png" alt="portfolio screenshot"></a>
+
+              <li class="name"><strong>Portfolio Site - Ruby on Rails</strong><a class="pull-right" href="http://github.com/cleriphil/Portfolio_new"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
+              <li class=" description">Take a look at the source code for the Rails version of my
+                portfolio site. Using Devise for authentication/authorization, the app allows users to
+                create, edit and delete blog posts and comments.</li><br>
+              <li><small>Ruby on Rails, Active Record, AJAX, JQuery, SASS, Bootstrap</small></li>
+
+            </div>
+
+              <br>
+
+              <hr>
+
+              <div class="project">
+
+
+                    <a href="http://github.com/cleriphil/Ruby_Game"><img class="project-image" src="public/ruby_game1.png" alt="ruby game screenshot"></a>
+
+                <li class="name"><a href="http://github.com/cleriphil/Ruby_Game">Ruby Game </a><strong><a class="pull-right" href="http://github.com/cleriphil/Ruby_Game"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
+                <li class="description">A text-based adventure game for learners of Ruby. Users must fill in missing code blocks to progress in their journey.</li><br>
+                <li><small>Ruby, Sinatra, Active Record, Bootstrap</small></li>
+
+              </div>
+              <br>
+
+              <hr>
+
+              <div class="project">
+
+
+                    <a href="http://roman-forum.bitballoon.com/"><img class="project-image" src="public/roman_forum.png" alt="roman forum screenshot"></a>
+
+                <li class="name"><a href="http://github.com/cleriphil/Roman_Forum">Roman Forum</a><strong><a class="pull-right" href="http://github.com/cleriphil/Roman_Forum"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
+                <li class="description">An advice message board app built with Ember.js. Users may add, edit and delete questions and answers. </li><br>
+                <li><small>Ember.js, Bootstrap</small></li>
+
+              </div>
+              <br>
+
+              <hr>
+
+
+              <div class="project">
+
+
+                    <a href="http://github.com/cleriphil/artnet-auctions-clone"><img class="project-image" src="public/artnet_auctions.png" alt="artnet auctions clone screenshot"></a>
+
+                <li class="name"><a href="http://github.com/cleriphil/artnet-auctions-clone">Artnet Auctions Clone </a><strong><a class="pull-right" href="http://github.com/cleriphil/artnet-auctions-clone"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
+                <li class="description">A version of Artnet Auctions built with Ruby on Rails and AJAX. (A work in progress!) </li><br>
+                <li><small>Ruby on Rails, Active Record, AJAX, Bootstrap</small></li>
+
+              </div>
+              <br>
+
+              <hr>
+
+
+              <div class="project">
+
+
+                    <a href="http://orderapizza.bitballoon.com/"><img class="project-image" src="public/pizza.png" alt="order a pizza screenshot"></a>
+
+                <li class="name"><a href="http://www.github.com/cleriphil/order_a_pizza">Order a Pizza </a><strong><a class="pull-right" href="http://www.github.com/cleriphil/order_a_pizza"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
+                <li class="description">A JQuery app that allows users to select the size, toppings and quantity of their desired pie. When selections are submitted, the app dynamically updates the cost of the order.  </li><br>
+                <li><small>JQuery, Mocha/Chai</small></li>
+
+              </div>
+              <br>
+
+
+          </ul>
+        </div>
+
+
+      </div>
+
+      <!-- resume below -->
+
+      <div class="sections col-md-5" id="section_3">
+
+        <h2>Experience</h2>
+        <h4>QA Developer</h4>
+        <h5><em>Cardsmith.co</em> - Portland, OR <span class="pull-right">2015-present</span></h5>
+        <ul class="resume">
+          <li>Produce test scripts and perform regression testing when bugs are resolved</li>
+        </ul>
+        <hr>
+        <h4>Web Development Intern</h4>
+        <h5><em>Cardsmith.co</em> - Portland, OR <span class="pull-right">2015</span></h5>
+        <ul class="resume">
+          <li>Transferred UI designs into dynamic webpages using HTML, CSS and Ractive.js</li>
+          <li>Used Chrome Developer Tools to identify and fix bugs reported by users</li>
+          <li>Worked closely with VP of Engineering to develop and test browser compatible pages</li>
+        </ul>
+        <hr>
+
+        <h4>Database Intern</h4>
+        <h5><em>Artsparkr</em> - New York, NY <span class="pull-right">2015</span></h5>
+        <ul class="resume">
+          <li>Aggregated information for database of an international arts opportunity search engine</li>
+          <li>Located and extracted most-up-to-date information for 50 to 60 art residencies per week</li>
+        </ul>
+        <hr>
+
+        <h4>Administrative Assistant</h4>
+        <h5><em>Artful Circle</em> - New York, NY <span class="pull-right">2014 - 2015</span></h5>
+        <ul class="resume">
+
+          <li>Managed email marketing lists for approximately 1000 contacts</li>
+          <li>Used HTML and CSS to enhance existing Wordpress site</li>
+        </ul>
+        <hr>
+
+        <h4>Database Researcher</h4>
+        <h5><em>Eric & Heather ChanSchatz</em> - New York, NY <span class="pull-right">2014</span></h5>
+        <ul class="resume">
+          <li>Used Excel to transfer, record and organize data for over 1000 works of art</li>
+          <li>Maintained database results by setting and enforcing standards and controls</li>
+          <li>Maintained database performance by troubleshooting problems</li>
+          <li>Kept artists informed by preparing weekly reports on system performance and problems</li>
+        </ul>
+        <hr>
+        <h2>Skills</h2>
+        HTML, CSS, SASS, JavaScript, AJAX, jQuery, Ember.js, Ractive.js, Ruby on Rails, Test Driven Development, Pair Programming, SQL, Git
+
+        <hr>
+        <h2>Education</h2>
+
+        <div class="panel">
+          <h4>Epicodus</h4>
+          <h5><em>Ruby/JavaScript/Rails</em><span class="pull-right">2015</span></h5>
+
+        </div>
+        <div class="panel">
+
+          <h4>Temple University</h4>
+          <h5><em>Bachelor of Arts, Art History</em><span class="pull-right">2010-2013</span></h5>
+          <h5>Temple University Rome, <em>Full-Year Study Abroad</em><span class="pull-right">2012-2013</span></h5>
+        </div>
+        <br>
+
+      </div>
+
+      <!-- contact below -->
+      <div class="sections col-md-5" id="section_4">
+
+
+        <br>
+        <h5>e: <a href="mailto:cleri.phil@gmail.com">cleri.phil@gmail.com</a><h5>
+        <h5>l: <a href="http://www.linkedin.com/in/cleri" target="_blank">www.linkedin.com/in/cleri</a></h5>
+        <h5>g: <a href="http://www.github.com/cleriphil" target="_blank">www.github.com/cleriphil</a></h5>
 
       </div>
     </div>
