--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         </ul>
         <hr>
         <h2>Skills</h2>
-        HTML, CSS, SASS, JavaScript, AJAX, jQuery, Ember.js, Ractive.js, Ruby on Rails, Test Driven Development, Pair Programming, SQL, Git
+        HTML, CSS, SASS, JavaScript, AJAX, jQuery, Ember.js, Ractive.js, Ruby on Rails, Test Driven Development, Capybara, RSpec, SQL, Git
 
         <hr>
         <h2>Education</h2>
