add skill detail to artnet project

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <li class="name"><a href="http://github.com/cleriphil/artnet-auctions-clone">Artnet Auctions Clone </a><strong><a class="pull-right" href="http://github.com/cleriphil/artnet-auctions-clone"><img src="public/github-circle2.png" alt="github icon"></a></strong></li>
                 <li class="description">A version of Artnet Auctions built with Ruby on Rails and AJAX. (A work in progress!) </li><br>
-                <li><small>Ruby on Rails, Active Record, AJAX, Bootstrap</small></li>
+                <li><small>Ruby on Rails, Active Record, AJAX, SASS, Bootstrap</small></li>
 
               </div>
               <br>
