--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
       <div class="menu left-nav">
         <ul>
-          <li role="menuitem"><div class="navlink" id="navlink_1">About</div></li>
-          <li role="menuitem"><div class="navlink active" id="navlink_2">Projects</div></li>
+<!--           <li role="menuitem"><div class="navlink" id="navlink_1">About</div></li>
+          <li role="menuitem"><div class="navlink active" id="navlink_2">Projects</div></li> -->
           <li role="menuitem"><div class="navlink" id="navlink_3">Resumé</div></li>
           <li role="menuitem"><div class="navlink" id="navlink_4">Contact</div></li>
         </ul>
@@ -41,16 +41,7 @@
 
           <div class="photo-circle"></div>
 
-          <div class="about-me">I’m an artist who recently dived into the world of programming.
-          After studying art history, I happened upon a database researcher
-          job for a pair of artists. I fiddled with Excel to organize existing data
-          and plan for future data collection through a user interface. The
-          problem solving and logic involved in my work inspired me to learn
-          to code, which led me to attend Epicodus, a four month intensive
-           bootcamp. Now, I’m looking to utilize my skills in a developer
-           position while expanding my knowledge of different languages,
-           tools and frameworks. With a passion for visual culture and art,
-            I’m eager to take part in creative endeavors through technology.</div>
+          <div class="about-me">I</div>
 
         </div>
       </div>
@@ -63,7 +54,7 @@
           <ul>
 
 
-            <div class="project">
+<!--             <div class="project">
 
 
                   <a href="http://github.com/cleriphil/Portfolio_new"><img class="project-image" src="public/portfolio.png" alt="portfolio screenshot"></a>
@@ -74,13 +65,13 @@
                 create, edit and delete blog posts and comments.</li><br>
               <li><small>Ruby on Rails, Active Record, AJAX, JQuery, SASS, Bootstrap</small></li>
 
-            </div>
+            </div> -->
 
               <br>
 
               <hr>
 
-              <div class="project">
+<!--               <div class="project">
 
 
                     <a href="http://github.com/cleriphil/Ruby_Game"><img class="project-image" src="public/ruby_game1.png" alt="ruby game screenshot"></a>
@@ -89,12 +80,12 @@
                 <li class="description">A text-based adventure game for learners of Ruby. Users must fill in missing code blocks to progress in their journey.</li><br>
                 <li><small>Ruby, Sinatra, Active Record, Bootstrap</small></li>
 
-              </div>
+              </div> -->
               <br>
 
               <hr>
 
-              <div class="project">
+<!--               <div class="project">
 
 
                     <a href="http://roman-forum.bitballoon.com/"><img class="project-image" src="public/roman_forum.png" alt="roman forum screenshot"></a>
@@ -103,13 +94,13 @@
                 <li class="description">An advice message board app built with Ember.js. Users may add, edit and delete questions and answers. </li><br>
                 <li><small>Ember.js, Bootstrap</small></li>
 
-              </div>
+              </div> -->
               <br>
 
               <hr>
 
 
-              <div class="project">
+<!--               <div class="project">
 
 
                     <a href="http://github.com/cleriphil/artnet-auctions-clone"><img class="project-image" src="public/artnet_auctions.png" alt="artnet auctions clone screenshot"></a>
@@ -118,13 +109,13 @@
                 <li class="description">A version of Artnet Auctions built with Ruby on Rails and AJAX. (A work in progress!) </li><br>
                 <li><small>Ruby on Rails, Active Record, AJAX, SASS, Bootstrap</small></li>
 
-              </div>
+              </div> -->
               <br>
 
               <hr>
 
 
-              <div class="project">
+<!--               <div class="project">
 
 
                     <a href="http://orderapizza.bitballoon.com/"><img class="project-image" src="public/pizza.png" alt="order a pizza screenshot"></a>
@@ -133,7 +124,7 @@
                 <li class="description">A JQuery app that allows users to select the size, toppings and quantity of their desired pie. When selections are submitted, the app dynamically updates the cost of the order.  </li><br>
                 <li><small>JQuery, Mocha/Chai</small></li>
 
-              </div>
+              </div> -->
               <br>
 
 
@@ -146,7 +137,52 @@
       <!-- resume below -->
 
       <div class="sections col-md-5" id="section_3">
-
+<p class="p1">&nbsp;</p>
+<p class="p1">&nbsp;</p>
+<p class="p2"><span class="s1">Experience </span></p>
+<p class="p2"><span class="s1"><strong>Dealer Spike</strong>; Wilsonville, OR<span class="Apple-converted-space">&nbsp; </span></span></p>
+<p class="p3">&nbsp;</p>
+<p class="p3"><strong><em>QA Specialist II </em></strong>&mdash; Nov 2018 - Present</p>
+<p class="p4"><span class="s1"><strong><em>QA Specialist </em></strong>&mdash; Aug 2017 - Nov 2018</span></p>
+<p class="p5">&nbsp;</p>
+<ul class="ul1">
+<li class="li6"><span class="s1">Thoroughly document test results and track bugs on Azure DevOps&nbsp;</span></li>
+<li class="li6"><span class="s1">Estimate, prioritize, plan and coordinate testing tasks</span></li>
+<li class="li6"><span class="s1">Create detailed test cases based on product requirements</span></li>
+<li class="li6"><span class="s1">Perform cross-browser testing&nbsp;and regression testing</span></li>
+<li class="li6"><span class="s1">Create feature requests based on UX improvements</span></li>
+<li class="li6"><span class="s1">Participate and provide feedback in Scrum ceremonies (Planning, Grooming, etc.)</span></li>
+<li class="li6"><span class="s1">Document Agile testing workflow&nbsp;</span></li>
+<li class="li6"><span class="s1">Train QA specialists and developers on Agile testing workflow&nbsp;</span></li>
+<li class="li6"><span class="s1">Promoted for playing a major role in establishing the department&rsquo;s testing workflow, creating documentation and training team members</span><span class="s2"><br /> </span></li>
+</ul>
+<p class="p4"><span class="s1"><strong><em>Front-End Developer/Support</em> </strong>&mdash; Nov 2015 - Aug 2017</span></p>
+<p class="p5">&nbsp;</p>
+<ul class="ul1">
+<li class="li6"><span class="s1">Resolved 40-50 tickets weekly regarding platform issues and feature additions</span></li>
+<li class="li6"><span class="s1">Created tickets for bug fixes and feature requests for development department</span></li>
+<li class="li6"><span class="s1">Created tickets for data-related bugs and requests for feeds department</span></li>
+<li class="li6"><span class="s1">Trained support agents and new hires on eCommerce platform and website platform</span></li>
+<li class="li6"><span class="s1">Used HTML, CSS and JavaScript/jQuery to complete style and feature requests<br /> </span></li>
+</ul>
+<p class="p7"><span class="s1"><strong>Cardsmith.co</strong>; Portland, OR</span></p>
+<p class="p8">&nbsp;</p>
+<p class="p4"><span class="s1"><strong><em>Web Development Intern/QA Tester</em> </strong>&mdash; Aug 2015 - Nov 2015</span></p>
+<p class="p5">&nbsp;</p>
+<ul class="ul1">
+<li class="li6"><span class="s1">Used Chrome Developer Tools to identify and fix bugs reported by users</span></li>
+<li class="li6"><span class="s1">Worked closely with VP of Engineering to develop and test browser compatible pages</span></li>
+<li class="li6"><span class="s1">Created test cases and performed cross-browser testing&nbsp;and regression testing </span></li>
+</ul>
+<p class="p9">&nbsp;</p>
+<p class="p10"><span class="s1">Skills QA: Bug Tracking (Azure DevOps), Regression Testing, Negative Testing, UI &amp; Cross-Browser Testing, Exploratory Testing</span></p>
+<p class="p11">&nbsp;</p>
+<p class="p12"><span class="s1">Technical: HTML, CSS, Less, Bootstrap, JavaScript, jQuery, SQL, Git, Knowledge of Test Automation (Selenium, Nightwatch.js and Robot Framework)</span></p>
+<p class="p13">&nbsp;</p>
+<p class="p14"><span class="s1">General: Agile and Scrum, Documentation, Training, Time Management, Adaptability</span></p>
+<p class="p1">&nbsp;</p>
+<p class="p15"><span class="s1">Education Epicodus; Portland, OR &mdash; Ruby/JavaScript/Rails, 2015</span></p>
+<p class="p16"><span class="s1">Temple University; Philadelphia, PA &mdash; Bachelor of Arts, Art History , 2010 - 2013</span></p>
         <h2>Experience</h2>
         <h4>QA Developer</h4>
         <h5><em>Cardsmith.co</em> - Portland, OR <span class="pull-right">2015-present</span></h5>
