--- a/index.html
+++ b/index.html
@@ -183,65 +183,12 @@
 <p class="p1">&nbsp;</p>
 <p class="p15"><span class="s1">Education Epicodus; Portland, OR &mdash; Ruby/JavaScript/Rails, 2015</span></p>
 <p class="p16"><span class="s1">Temple University; Philadelphia, PA &mdash; Bachelor of Arts, Art History , 2010 - 2013</span></p>
-        <h2>Experience</h2>
-        <h4>QA Developer</h4>
-        <h5><em>Cardsmith.co</em> - Portland, OR <span class="pull-right">2015-present</span></h5>
-        <ul class="resume">
-          <li>Produce test scripts and perform regression testing when bugs are resolved</li>
-        </ul>
-        <hr>
-        <h4>Web Development Intern</h4>
-        <h5><em>Cardsmith.co</em> - Portland, OR <span class="pull-right">2015</span></h5>
-        <ul class="resume">
-          <li>Transferred UI designs into dynamic webpages using HTML, CSS and Ractive.js</li>
-          <li>Used Chrome Developer Tools to identify and fix bugs reported by users</li>
-          <li>Worked closely with VP of Engineering to develop and test browser compatible pages</li>
-        </ul>
-        <hr>
 
-        <h4>Database Intern</h4>
-        <h5><em>Artsparkr</em> - New York, NY <span class="pull-right">2015</span></h5>
-        <ul class="resume">
-          <li>Aggregated information for database of an international arts opportunity search engine</li>
-          <li>Located and extracted most-up-to-date information for 50 to 60 art residencies per week</li>
-        </ul>
-        <hr>
 
-        <h4>Administrative Assistant</h4>
-        <h5><em>Artful Circle</em> - New York, NY <span class="pull-right">2014 - 2015</span></h5>
-        <ul class="resume">
+ 
 
-          <li>Managed email marketing lists for approximately 1000 contacts</li>
-          <li>Used HTML and CSS to enhance existing Wordpress site</li>
-        </ul>
-        <hr>
 
-        <h4>Database Researcher</h4>
-        <h5><em>Eric & Heather ChanSchatz</em> - New York, NY <span class="pull-right">2014</span></h5>
-        <ul class="resume">
-          <li>Used Excel to transfer, record and organize data for over 1000 works of art</li>
-          <li>Maintained database results by setting and enforcing standards and controls</li>
-          <li>Maintained database performance by troubleshooting problems</li>
-          <li>Kept artists informed by preparing weekly reports on system performance and problems</li>
-        </ul>
-        <hr>
-        <h2>Skills</h2>
-        HTML, CSS, SASS, JavaScript, AJAX, jQuery, Ember.js, Ractive.js, Ruby on Rails, Test Driven Development, Capybara, RSpec, SQL, Git
-
-        <hr>
-        <h2>Education</h2>
-
-        <div class="panel">
-          <h4>Epicodus</h4>
-          <h5><em>Ruby/JavaScript/Rails</em><span class="pull-right">2015</span></h5>
-
-        </div>
-        <div class="panel">
-
-          <h4>Temple University</h4>
-          <h5><em>Bachelor of Arts, Art History</em><span class="pull-right">2010-2013</span></h5>
-          <h5>Temple University Rome, <em>Full-Year Study Abroad</em><span class="pull-right">2012-2013</span></h5>
-        </div>
+ 
         <br>
 
       </div>
@@ -253,8 +200,8 @@
         <br>
         <h5>e: <a href="mailto:cleri.phil@gmail.com">cleri.phil@gmail.com</a><h5>
         <h5>l: <a href="http://www.linkedin.com/in/cleri" target="_blank">www.linkedin.com/in/cleri</a></h5>
-        <h5>g: <a href="http://www.github.com/cleriphil" target="_blank">www.github.com/cleriphil</a></h5>
-
+<!--         <h5>g: <a href="http://www.github.com/cleriphil" target="_blank">www.github.com/cleriphil</a></h5>
+ -->
       </div>
     </div>
 
