--- a/index.html
+++ b/index.html
@@ -137,57 +137,41 @@
       <!-- resume below -->
 
       <div class="sections col-md-5" id="section_3">
-<p class="p1">&nbsp;</p>
-<p class="p1">&nbsp;</p>
-<p class="p2"><span class="s1">Experience </span></p>
-<p class="p2"><span class="s1"><strong>Dealer Spike</strong>; Wilsonville, OR<span class="Apple-converted-space">&nbsp; </span></span></p>
-<p class="p3">&nbsp;</p>
-<p class="p3"><strong><em>QA Specialist II </em></strong>&mdash; Nov 2018 - Present</p>
-<p class="p4"><span class="s1"><strong><em>QA Specialist </em></strong>&mdash; Aug 2017 - Nov 2018</span></p>
-<p class="p5">&nbsp;</p>
-<ul class="ul1">
-<li class="li6"><span class="s1">Thoroughly document test results and track bugs on Azure DevOps&nbsp;</span></li>
-<li class="li6"><span class="s1">Estimate, prioritize, plan and coordinate testing tasks</span></li>
-<li class="li6"><span class="s1">Create detailed test cases based on product requirements</span></li>
-<li class="li6"><span class="s1">Perform cross-browser testing&nbsp;and regression testing</span></li>
-<li class="li6"><span class="s1">Create feature requests based on UX improvements</span></li>
-<li class="li6"><span class="s1">Participate and provide feedback in Scrum ceremonies (Planning, Grooming, etc.)</span></li>
-<li class="li6"><span class="s1">Document Agile testing workflow&nbsp;</span></li>
-<li class="li6"><span class="s1">Train QA specialists and developers on Agile testing workflow&nbsp;</span></li>
-<li class="li6"><span class="s1">Promoted for playing a major role in establishing the department&rsquo;s testing workflow, creating documentation and training team members</span><span class="s2"><br /> </span></li>
+<p>Experience</p>
+<p><strong>Dealer Spike</strong>; Wilsonville, OR</p>
+<p><strong><em>QA Specialist II </em></strong>&mdash; Nov 2018 - Present</p>
+<p><strong><em>QA Specialist </em></strong>&mdash; Aug 2017 - Nov 2018</p>
+<ul>
+<li>Thoroughly document test results and track bugs on Azure DevOps&nbsp;</li>
+<li>Estimate, prioritize, plan and coordinate testing tasks</li>
+<li>Create detailed test cases based on product requirements</li>
+<li>Perform cross-browser testing&nbsp;and regression testing</li>
+<li>Create feature requests based on UX improvements</li>
+<li>Participate and provide feedback in Scrum ceremonies (Planning, Grooming, etc.)</li>
+<li>Document Agile testing workflow&nbsp;</li>
+<li>Train QA specialists and developers on Agile testing workflow&nbsp;</li>
+<li>Promoted for playing a major role in establishing the department&rsquo;s testing workflow, creating documentation and training team members</li>
 </ul>
-<p class="p4"><span class="s1"><strong><em>Front-End Developer/Support</em> </strong>&mdash; Nov 2015 - Aug 2017</span></p>
-<p class="p5">&nbsp;</p>
-<ul class="ul1">
-<li class="li6"><span class="s1">Resolved 40-50 tickets weekly regarding platform issues and feature additions</span></li>
-<li class="li6"><span class="s1">Created tickets for bug fixes and feature requests for development department</span></li>
-<li class="li6"><span class="s1">Created tickets for data-related bugs and requests for feeds department</span></li>
-<li class="li6"><span class="s1">Trained support agents and new hires on eCommerce platform and website platform</span></li>
-<li class="li6"><span class="s1">Used HTML, CSS and JavaScript/jQuery to complete style and feature requests<br /> </span></li>
+<p><strong><em>Front-End Developer/Support</em></strong>&mdash; Nov 2015 - Aug 2017</p>
+<ul>
+<li>Resolved 40-50 tickets weekly regarding platform issues and feature additions</li>
+<li>Created tickets for bug fixes and feature requests for development department</li>
+<li>Created tickets for data-related bugs and requests for feeds department</li>
+<li>Trained support agents and new hires on eCommerce platform and website platform</li>
+<li>Used HTML, CSS and JavaScript/jQuery to complete style and feature requests</li>
 </ul>
-<p class="p7"><span class="s1"><strong>Cardsmith.co</strong>; Portland, OR</span></p>
-<p class="p8">&nbsp;</p>
-<p class="p4"><span class="s1"><strong><em>Web Development Intern/QA Tester</em> </strong>&mdash; Aug 2015 - Nov 2015</span></p>
-<p class="p5">&nbsp;</p>
-<ul class="ul1">
-<li class="li6"><span class="s1">Used Chrome Developer Tools to identify and fix bugs reported by users</span></li>
-<li class="li6"><span class="s1">Worked closely with VP of Engineering to develop and test browser compatible pages</span></li>
-<li class="li6"><span class="s1">Created test cases and performed cross-browser testing&nbsp;and regression testing </span></li>
+<p><strong>Cardsmith.co</strong>; Portland, OR</p>
+<p><strong><em>Web Development Intern/QA Tester</em></strong>&mdash; Aug 2015 - Nov 2015</p>
+<ul>
+<li>Used Chrome Developer Tools to identify and fix bugs reported by users</li>
+<li>Worked closely with VP of Engineering to develop and test browser compatible pages</li>
+<li>Created test cases and performed cross-browser testing&nbsp;and regression testing</li>
 </ul>
-<p class="p9">&nbsp;</p>
-<p class="p10"><span class="s1">Skills QA: Bug Tracking (Azure DevOps), Regression Testing, Negative Testing, UI &amp; Cross-Browser Testing, Exploratory Testing</span></p>
-<p class="p11">&nbsp;</p>
-<p class="p12"><span class="s1">Technical: HTML, CSS, Less, Bootstrap, JavaScript, jQuery, SQL, Git, Knowledge of Test Automation (Selenium, Nightwatch.js and Robot Framework)</span></p>
-<p class="p13">&nbsp;</p>
-<p class="p14"><span class="s1">General: Agile and Scrum, Documentation, Training, Time Management, Adaptability</span></p>
-<p class="p1">&nbsp;</p>
-<p class="p15"><span class="s1">Education Epicodus; Portland, OR &mdash; Ruby/JavaScript/Rails, 2015</span></p>
-<p class="p16"><span class="s1">Temple University; Philadelphia, PA &mdash; Bachelor of Arts, Art History , 2010 - 2013</span></p>
-
-
- 
-
-
+<p>Skills QA: Bug Tracking (Azure DevOps), Regression Testing, Negative Testing, UI &amp; Cross-Browser Testing, Exploratory Testing</p>
+<p>Technical: HTML, CSS, Less, Bootstrap, JavaScript, jQuery, SQL, Git, Knowledge of Test Automation (Selenium, Nightwatch.js and Robot Framework)</p>
+<p>General: Agile and Scrum, Documentation, Training, Time Management, Adaptability</p>
+<p>Education Epicodus; Portland, OR &mdash; Ruby/JavaScript/Rails, 2015</p>
+<p>Temple University; Philadelphia, PA &mdash; Bachelor of Arts, Art History , 2010 - 2013</p>
  
         <br>
 
